--- a/server/.env
+++ b/server/.env
@@ -1,12 +1,12 @@
-DB_USER=ernesto
-DB_PASSWD=ernesto
-DB_HOST=192.168.99.100
+DB_USER=tibicha
+DB_PASSWD=tibicha
+DB_HOST=192.168.99.104
 DB_PORT=3306
 DB_NAME=matcha
 SERVER_HOST=10.12.6.3
 SERVER_PORT=1337
 EMAIL=abdellahelhabchi96@gmail.com
 PASS=Abde06371790@!
-TOKEN_SECRET="05aa9d17d65d9abaa6dc526e425bdd"
-FRONT_HOST=10.12.6.3
+TOKEN_SECRET="7b05aa9d17d65d9abaa6dc526e425bdd"
+FRONT_HOST=localhost
 FRONT_PORT=3000
